--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -65,11 +65,11 @@ jwplayer("<%= image%>
         @item.props["http://purl.org/rss/1.0/description"][0].html_safe end %>
 			</div>
 
-			<div class="fullContent" hidden>
+			<div class="fullContent" style="display:none">
 				<%= htmlval  %>
 			</div>
-			<button class="expandArticle pull-right btn" onclick="$(this).prev('.fullContent').prev('.contentArticle').hide();$(this).hide();$(this).prev('.fullContent').show();$(this).next('.shortenArticle').show()"><i class="icon-chevron-down"></i></button>
-			<button class="shortenArticle pull-right btn" style='display:none' onclick="$(this).prev('.expandArticle').prev('.fullContent').hide();$(this).hide();$(this).prev('.expandArticle').prev('.fullContent').prev('.contentArticle').show();$(this).prev('.expandArticle').show()"><i class="icon-chevron-up"></i></button>
+			<button class="expandArticle pull-right btn" onclick="$(this).prev('.fullContent').prev('.contentArticle').hide();$(this).hide();$(this).prev('.fullContent').slideDown();$(this).next('.shortenArticle').show()"><i class="icon-chevron-down"></i></button>
+			<button class="shortenArticle pull-right btn" style='display:none' onclick="$(this).prev('.expandArticle').prev('.fullContent').slideUp('slow');$(this).hide();$(this).prev('.expandArticle').prev('.fullContent').prev('.contentArticle').show();$(this).prev('.expandArticle').show()"><i class="icon-chevron-up"></i></button>
 		</div>
 	</div>
 
