--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -36,12 +36,13 @@ jwplayer("<%= image%>
 %>
 			<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
 			<a href= "<%= @item.uri %>"> <%= @item.props["http://purl.org/rss/1.0/title"][0]%> </a>
+			<i>
 			<%= begin
 				date = DateTime.parse(@item.props["http://purl.org/rss/1.0/pubDate"][0])
 date.strftime(' - le %d/%m/%Y à %H:%M')
           
         rescue
-        end %>
+        end %></i>
 			<div class="btn-toolbar">
 				<% htmlval =""
 				@item.props.each do |item|
