--- a/ZONE-watcher/app/views/home/_search.html.erb
+++ b/ZONE-watcher/app/views/home/_search.html.erb
@@ -37,7 +37,7 @@
         <!-- go button-->
         <div class="row-fluid">
           <div class="span8">
-            <a href="#advancedSearchModal" role="button" class="left btn btn-success btn-large btn-primary goButton" data-toggle="modal"><%= raw t 'search.searchadvanced' %></a>
+            <a href="#advancedSearchModal" role="button" id="semanticSearchGoButton" class="left btn btn-success btn-large btn-primary goButton" data-toggle="modal" data-content="Tag bien ajouté" data-original-title="Confirmation d'ajout"><%= raw t 'search.searchadvanced' %></a>
 
           </div>
           <div class="span4 text-right">
