--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -26,8 +26,8 @@ jwplayer("<%= image%>
 	</div>
 	<div class="span9">
 		<%else%>
-		<div class="span12">
 			<%end%>
+			<div class="span7">
 			<% if @item.uri.starts_with?('http://twitter.com')
           thumb="assets/twitter.png"
         else
@@ -36,13 +36,29 @@ jwplayer("<%= image%>
 %>
 			<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
 			<a href= "<%= @item.uri %>"> <%= @item.props["http://purl.org/rss/1.0/title"][0]%> </a>
+			<br>
 			<i>
 			<%= begin
 				date = DateTime.parse(@item.props["http://purl.org/rss/1.0/pubDate"][0])
-date.strftime(' - le %d/%m/%Y à %H:%M')
+date.strftime('Le %d/%m/%Y à %H:%M')
           
         rescue
         end %></i>
+        </div>
+        <div class="span5 row-favorite" style="display:none">
+		<button class="btn" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
+		<button class="btn" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
+		
+		<span class="separationLine" ></span>
+		
+		<i><%= raw t 'items.users.share' %> </i>
+		<img src="assets/foregroundFBGray.png" class="littleCircleImage" width=30 height=30>
+		<img src="assets/foregroundTwitterGray.png" class="littleCircleImage" width=30 height=30>
+		<img src="assets/foregroundGoogleGray.png" class="littleCircleImage" width=30 height=30>
+	</div>
+	</div>
+	<div class="row-fluid">
+	<div class="span12">
 			<div class="btn-toolbar">
 				<% htmlval =""
 				@item.props.each do |item|
@@ -71,17 +87,7 @@ date.strftime(' - le %d/%m/%Y à %H:%M')
 			</div>
 	</div>
 	<hr>
-	<div class="row-fluid">
-		<button class="btn" disabled><i class="icon icon-heart"></i><i> <%= raw t 'items.users.favorite' %></i></button>
-		<button class="btn" disabled><i class="icon icon-check"></i><i> <%= raw t 'items.users.read' %></i></button>
-		
-		<span class="separationLine" ></span>
-		
-		<i><%= raw t 'items.users.share' %> </i>
-		<img src="assets/foregroundFBGray.png" class="littleCircleImage" width=30 height=30>
-		<img src="assets/foregroundTwitterGray.png" class="littleCircleImage" width=30 height=30>
-		<img src="assets/foregroundGoogleGray.png" class="littleCircleImage" width=30 height=30>
-	</div>
+	
 	
 	<div class="accordion" id="accordion-<%= @uriHash %>" style="margin-bottom: 0px;">
 		<div class="accordion-group">
