--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -202,19 +202,46 @@ ul.sortable li {
   border:1px solid #49afcd;
   border-color:transparent transparent #49afcd transparent;
   border-width: 15px;
- top: -3px;
-position: relative;
-left: 50%;
+  top: -3px;
+  position: relative;
+  left: 50%;
 }
 
 .imgRSS:after{
-content:"";
+  content:"";
   width:1px;
   height:1px;
   border:1px solid #f89406;
   border-color:transparent transparent #f89406 transparent;
   border-width: 15px;
   top: -3px;
-position: relative;
-left: 50%;
+  position: relative;
+  left: 50%;
+}
+
+.formHeader{
+  border-top-left-radius:4px;
+  border-top-right-radius:4px;
+}
+.formHeader.twitter{
+  background-color:#49afcd;
+}
+.formHeader.rss{
+  background-color:#f89406;
+}
+
+.titleHeader{
+  margin-top: 0px;
+  color: white;
+}
+.titleFormContent{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.titleFormContent.twitter{
+  background-color:#49afcd;
+  
+}
+.titleFormContent.rss{
+  background-color:#f89406;
 }
