--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -1,7 +1,7 @@
 <div class="row-fluid">
 	<div class="span12">
 		<ul class="breadcrumb">
-			<li>
+			<li class="active">
 				Sources (1/2)<span class="divider">/</span>
 			</li>
 			<li>
@@ -49,9 +49,9 @@
 							<div class="span1"></div>
 							<div class="span10">
 								<div class="contentTwitter" >
-									<div class="formHeader">
+									<div class="formHeader twitter">
 										<div class="span1"></div>
-										<b>Twitter</b>
+										<h3 class="titleHeader">Twitter</h3>
 									</div>
 									<div class="formContent">
 										<div class="row-fluid">
@@ -69,7 +69,8 @@
 											</div>
 										</div>
 										<div class="row-fluid">
-											<div class="span12">
+											<div class="span1"></div>
+											<div class="span10">
 												<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
 													<%= raw t 'semanticsource.button.addone' %>
 												</button>
@@ -89,9 +90,9 @@
 											</div>
 										</div>
 										<div class="row-fluid">
-											<div class="span12">
+											<div class="titleFormContent twitter span12">
 												<div class="span1"></div>
-												<b>Vos choix</b>
+												<h3 class="titleHeader">Vos choix</h3>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -107,9 +108,9 @@
 							<div class="span1"></div>
 							<div class="span10">
 								<div class="contentRSS">
-									<div class="formHeader">
+									<div class="formHeader rss">
 										<div class="span1"></div>
-										<b>RSS</b>
+										<h3 class="titleHeader">RSS</h3>
 									</div>
 									<div class="formContent">
 										<div class="row-fluid">
@@ -141,9 +142,9 @@
 											</div>
 										</div>
 										<div class="row-fluid">
-											<div class="span12">
+											<div class="titleFormContent rss span12">
 												<div class="span1"></div>
-												<b>Vos choix</b>
+												<h3 class="titleHeader">Vos choix</h3>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -161,14 +162,18 @@
 				<div class="row-fluid">
 					<div class="span4"></div>
 					<div class="span4">
-						<button class="btn btn-success">
+						<button class="btn btn-success" type="button" onclick="switchTab()">
 							<h3>Valider et passer à la suite</h3>
 						</button>
 					</div>
 				</div>
 			</div><!--tab-pane -->
-			<div class="tab-pane" id="sourcesSecond"></div>
-			<div class="tab-pane" id="FilteringFirst"></div>
+			<div class="tab-pane" id="sourcesSecond">
+				toto
+			</div>
+			<div class="tab-pane" id="FilteringFirst">
+				tutu
+			</div>
 			<div class="tab-pane" id="FilteringSecond"></div>
 		</div>
 	</div>
