--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -26,7 +26,7 @@
 				<div class="row-fluid">
 					<div class="span1"></div>
 					<div class="span10">
-						<h2>Sélectionner vos sources</h2>
+						<h2><%= raw t 'newmodal.sources.title' %></h2>
 					</div>
 				</div>
 				<div class="row-fluid">
@@ -72,7 +72,7 @@
 											<div class="span1"></div>
 											<div class="span10">
 												<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
-													<%= raw t 'semanticsource.button.addone' %>
+													<%= raw t 'newmodal.sources.add' %>
 												</button>
 											</div>
 										</div>
@@ -85,14 +85,14 @@
 											<div class="span5"></div>
 											<div class="span2">
 												<button class="btn btn-success span12" type="button" onclick="addAllSourceTable('formTwitter');return false;">
-													<%= raw t 'semanticsource.button.addall' %>
+													<%= raw t 'newmodal.sources.twitter.all' %>
 												</button>
 											</div>
 										</div>
 										<div class="row-fluid">
 											<div class="titleFormContent twitter span12">
 												<div class="span1"></div>
-												<h3 class="titleHeader">Vos choix</h3>
+												<h3 class="titleHeader"><%= raw t 'newmodal.sources.choice' %></h3>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -124,7 +124,7 @@
 											<div class="span1"></div>
 											<div class="span10">
 												<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formRSS');return false;">
-													<%= raw t 'semanticsource.button.addone' %>
+													<%= raw t 'newmodal.sources.add' %>
 												</button>
 											</div>
 										</div>
@@ -137,14 +137,14 @@
 											<div class="span5"></div>
 											<div class="span2">
 												<button class="btn btn-success span12" type="button" onclick="addAllSourceTable('formRSS');return false;">
-													<%= raw t 'semanticsource.button.addall' %>
+													<%= raw t 'newmodal.sources.rss.all' %>
 												</button>
 											</div>
 										</div>
 										<div class="row-fluid">
 											<div class="titleFormContent rss span12">
 												<div class="span1"></div>
-												<h3 class="titleHeader">Vos choix</h3>
+												<h3 class="titleHeader"><%= raw t 'newmodal.sources.choice' %></h3>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -163,7 +163,7 @@
 					<div class="span4"></div>
 					<div class="span4">
 						<button class="btn btn-success" type="button" onclick="switchTab()">
-							<h3>Valider et passer à la suite</h3>
+							<h3><%= raw t 'newmodal.sources.switch' %></h3>
 						</button>
 					</div>
 				</div>
