--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -144,11 +144,14 @@
 				</div><!--row-fluid -->
 				<hr>
 				<div class="row-fluid">
-					<div class="span4"></div>
-					<div class="span4">
-						<button class="btn btn-success" type="button" onclick="switchTab()">
-							<h3><%= raw t 'newmodal.sources.switch' %></h3>
-						</button>
+					<div class="span1"></div>
+					<div class="span10">
+						<div class="span3"></div>
+						<div class="span6">
+							<button class="btn btn-success" type="button" style="width:100%" onclick="switchTab()">
+								<h3><%= raw t 'newmodal.sources.switch' %></h3>
+							</button>
+						</div>
 					</div>
 				</div>
 			</div><!--tab-pane -->
