--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -70,13 +70,16 @@
 										</div>
 										<div class="row-fluid">
 											<div class="span12">
-												<hr>
+												<div class="span4"><hr></div>
+												<div class="span4" style="text-align:center;"><h4 style="color:black"><%= raw t 'newmodal.sources.separator' %></h4></div>
+												<div class="span4"><hr></div>
 											</div>
 										</div>
 										<div class="row-fluid">
 											<div class="span4"></div>
 											<div class="span4">
-												<button class="btn btn-success span12" type="button" onclick="addAllSource('#wellTwitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
+												<div class="span1"></div>
+												<button class="btn btn-success span10" type="button" onclick="addAllSource('#wellTwitter','<%= raw t 'newmodal.sources.twitter.all' %>');return false;">
 													<%= raw t 'newmodal.sources.twitter.all' %>
 												</button>
 											</div>
@@ -114,14 +117,27 @@
 										</div>
 										<div class="row-fluid">
 											<div class="span12">
-												<hr>
+												<div class="span4"><hr></div>
+												<div class="span4" style="text-align:center;"><h4 style="color:black"><%= raw t 'newmodal.sources.separator' %></h4></div>
+												<div class="span4"><hr></div>
 											</div>
 										</div>
 										<div class="row-fluid">
-											<div class="span4"></div>
+											<div class="span1"></div>
+											<div class="span3">
+												<button class="btn btn-info span12" type="button" disabled>
+													<%= raw t 'newmodal.sources.rss.yourrss' %>
+												</button>
+											</div>
 											<div class="span4">
-												<button class="btn btn-success span12" type="button" onclick="addAllSource('#wellRSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
+												<div class="span1"></div>
+												<button class="btn btn-success span10" type="button" onclick="addAllSource('#wellRSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
 													<%= raw t 'newmodal.sources.rss.all' %>
+												</button>
+											</div>
+											<div class="span3">
+												<button class="btn btn-danger span12" type="button" disabled>
+													<%= raw t 'newmodal.sources.rss.opml' %>
 												</button>
 											</div>
 										</div>
