--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -24,8 +24,7 @@
 		<div class="tab-content">
 			<div class="tab-pane active" id="sourcesFirst">
 				<div class="row-fluid">
-					<div class="span1"></div>
-					<div class="span10">
+					<div class="span12">
 						<h2><%= raw t 'newmodal.sources.title' %></h2>
 					</div>
 				</div>
@@ -70,9 +69,15 @@
 										</div>
 										<div class="row-fluid">
 											<div class="span12">
-												<div class="span4"><hr></div>
-												<div class="span4" style="text-align:center;"><h4 style="color:black"><%= raw t 'newmodal.sources.separator' %></h4></div>
-												<div class="span4"><hr></div>
+												<div class="span4">
+													<hr>
+												</div>
+												<div class="span4" style="text-align:center;">
+													<h4 style="color:black"><%= raw t 'newmodal.sources.separator' %></h4>
+												</div>
+												<div class="span4">
+													<hr>
+												</div>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -117,9 +122,15 @@
 										</div>
 										<div class="row-fluid">
 											<div class="span12">
-												<div class="span4"><hr></div>
-												<div class="span4" style="text-align:center;"><h4 style="color:black"><%= raw t 'newmodal.sources.separator' %></h4></div>
-												<div class="span4"><hr></div>
+												<div class="span4">
+													<hr>
+												</div>
+												<div class="span4" style="text-align:center;">
+													<h4 style="color:black"><%= raw t 'newmodal.sources.separator' %></h4>
+												</div>
+												<div class="span4">
+													<hr>
+												</div>
 											</div>
 										</div>
 										<div class="row-fluid">
@@ -172,7 +183,42 @@
 				</div>
 			</div><!--tab-pane -->
 			<div class="tab-pane" id="sourcesSecond">
-				Hi i'm sources 2/2
+				<div class="row-fluid">
+					<div class="span12">
+						<h2><%= raw t 'newmodal.sources.resumetitle' %>
+						<button class="btn btn-info pull-right" type="button" onclick="reverseSwitchTab()"><%= raw t 'newmodal.sources.reverseswitch' %></button>
+						</h2>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span12">
+						<div class="row-fluid">
+							<div class="span12">
+								<h3>Twitter</h3>
+							</div>
+						</div>
+						<div class="row-fluid">
+							<div id="resumeWellTwitter" class="span12 well">
+								
+							</div>
+						</div>
+						<div class="row-fluid">
+							<div class="span12">
+								<h3>RSS</h3>
+							</div>
+						</div>
+						<div class="row-fluid">
+							<div id="resumeWellRSS" class="span12 well">
+								
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span12">
+
+					</div>
+				</div>
 			</div>
 			<div class="tab-pane" id="FilteringFirst">
 				Hi i'm filtering 1/2
