--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -59,14 +59,14 @@
 										<div class="row-fluid">
 											<div class="span12 input-prepend">
 												<div class="span1"></div>
-												<span class="add-on">@</span>
+												<span class="add-on"><b>@</b></span>
 												<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holderpersonn' %>" onKeyPress="if (event.keyCode == 13){ addSource('#wellTwitter','#loginTwitter');return false;}">
 											</div>
 										</div>
 										<div class="row-fluid">
 											<div class="span12 input-prepend">
 												<div class="span1"></div>
-												<span class="add-on">#</span>
+												<span class="add-on"><b>#</b></span>
 												<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.twitter.holdertag' %>" onKeyPress="if (event.keyCode == 13){ addSource('#wellTwitter','#searchTwitter');return false;}" />
 											</div>
 										</div>
@@ -119,7 +119,7 @@
 										<div class="row-fluid">
 											<div class="span12 input-prepend">
 												<div class="span1"></div>
-												<span class="add-on"><i class="icon-white icon-search"></i></span>
+												<span class="add-on"><i class="icon-search"></i></span>
 												<input name="inputSearch" id="searchRSS" type="text" class="inputSearch span10" autocomplete="off" placeholder="<%= raw t 'newmodal.sources.rss.holderurl' %>" onKeyPress="if (event.keyCode == 13){addSource('#wellRSS','#searchRSS');return false;}">
 											</div>
 										</div>
