--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -87,8 +87,6 @@
 											</div>
 										</div>
 
-
-
 									</div>
 									<!--formContent twiiter-->
 								</div>
@@ -150,8 +148,10 @@
 					</div><!--span12 -->
 				</div><!--row-fluid -->
 				<div class="row-fluid">
-						<div class="span2"></div>
-						<div class="span10"><h3><%= raw t 'newmodal.sources.choice' %></h3></div>
+					<div class="span2"></div>
+					<div class="span10">
+						<h3><%= raw t 'newmodal.sources.choice' %></h3>
+					</div>
 				</div>
 				<div class="row-fluid">
 					<div class="span2"></div>
@@ -165,13 +165,17 @@
 				</div>
 				<div class="row-fluid">
 					<div class="span1"></div>
-					<div class="span10">
-						<div class="span3"></div>
-						<div class="span6">
-							<button class="btn btn-info span12" type="button"  onclick="switchTab()">
-								<h3><%= raw t 'newmodal.sources.switch' %></h3>
-							</button>
-						</div>
+					<div class="span4">
+						<button class="btn btn-info span12" type="button"  onclick="switchTab()">
+							<h3><%= raw t 'newmodal.sources.gofiltering' %></h3>
+						</button>
+					</div>
+					<div class="span2"></div>
+					<div class="span4">
+						<a href="/items">
+						<button class="btn btn-success span12" type="button">
+							<h3><%= raw t 'newmodal.sources.goreador' %></h3>
+						</button> </a>
 					</div>
 				</div>
 			</div><!--tab-pane -->
