--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -202,19 +202,14 @@
 					<div class="span10">
 						<div class="row-fluid">
 							<div class="span8">
-								<h3><%= raw t 'semanticfiltering.linkword.title' %></h3>
+								<h3><%= raw t 'newmodal.filtering.related' %></h3>
 							</div>
 							<div class="span4">
-								<h3><%= raw t 'semanticfiltering.table.title' %></h3>
+								<h3><%= raw t 'newmodal.filtering.filtertype' %></h3>
 							</div>
 						</div>
 						<div class="row-fluid">
 							<div class="span8">
-								<div class="row-fluid">
-									<div class="span12">
-										
-									</div>
-								</div>
 								<div class="row-fluid">
 									<div class="span12">
 										<div class="keywordOverflow">
@@ -231,21 +226,60 @@
 							<div class="span4">
 								<div class="row-fluid">
 									<button class="btn btn-info span12 marged" type="button">
-										<h4 class="whiteh4">Optionnel</h4>
+										<h4 class="whiteh4"><%= raw t 'newmodal.filtering.buttonOption' %></h4>
 									</button>
 								</div>
 								<div class="row-fluid">
 									<button class="btn btn-success span12 marged" type="button">
-										<h4 class="whiteh4">Obligatoire</h4>
+										<h4 class="whiteh4"><%= raw t 'newmodal.filtering.buttonMusthave' %></h4>
 									</button>
 								</div>
 								<div class="row-fluid">
 									<button class="btn btn-danger span12" type="button">
-										<h4 class="whiteh4">Interdit</h4>
+										<h4 class="whiteh4"><%= raw t 'newmodal.filtering.buttonBan' %></h4>
 									</button>
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10">
+						<hr>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10">
+						<h4 class="blackh4"><%= raw t 'newmodal.filtering.resume.option' %></h4>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10 well">
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10">
+						<h4 class="blackh4"><%= raw t 'newmodal.filtering.resume.musthave' %></h4>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10 well">
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10">
+						<h4 class="blackh4"><%= raw t 'newmodal.filtering.resume.ban' %></h4>
+					</div>
+				</div>
+				<div class="row-fluid">
+					<div class="span1"></div>
+					<div class="span10 well">
 					</div>
 				</div>
 			</div>
