--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -193,7 +193,7 @@
 					<div class="span1"></div>
 					<div class="span10">
 						<div class="row-fluid">
-							<input class="span12" id="keyword" type="text" placeholder="Keyword" onkeypress="keywordComplete();" onkeyup="askUpdateKeywordTable();return false;">
+							<input class="span12" id="keyword" type="text" placeholder="Keyword" onkeyup="askUpdateKeywordTable();return false;">
 						</div>
 					</div>
 				</div>
@@ -225,17 +225,17 @@
 							</div>
 							<div class="span4">
 								<div class="row-fluid">
-									<button class="btn btn-info span12 marged" type="button">
+									<button class="btn btn-info span12 marged" type="button" onclick="addFilter('or');return false">
 										<h4 class="whiteh4"><%= raw t 'newmodal.filtering.buttonOption' %></h4>
 									</button>
 								</div>
 								<div class="row-fluid">
-									<button class="btn btn-success span12 marged" type="button">
+									<button class="btn btn-success span12 marged" type="button" onclick="addFilter('and');return false">
 										<h4 class="whiteh4"><%= raw t 'newmodal.filtering.buttonMusthave' %></h4>
 									</button>
 								</div>
 								<div class="row-fluid">
-									<button class="btn btn-danger span12" type="button">
+									<button class="btn btn-danger span12" type="button" onclick="addFilter('without');return false">
 										<h4 class="whiteh4"><%= raw t 'newmodal.filtering.buttonBan' %></h4>
 									</button>
 								</div>
@@ -257,7 +257,7 @@
 				</div>
 				<div class="row-fluid">
 					<div class="span1"></div>
-					<div class="span10 well">
+					<div id="wellOr" class="span10 well">
 					</div>
 				</div>
 				<div class="row-fluid">
@@ -268,7 +268,7 @@
 				</div>
 				<div class="row-fluid">
 					<div class="span1"></div>
-					<div class="span10 well">
+					<div id="wellAnd" class="span10 well">
 					</div>
 				</div>
 				<div class="row-fluid">
@@ -279,7 +279,7 @@
 				</div>
 				<div class="row-fluid">
 					<div class="span1"></div>
-					<div class="span10 well">
+					<div id="wellWithout" class="span10 well">
 					</div>
 				</div>
 			</div>
