--- a/ZONE-watcher/app/views/home/search.html.erb
+++ b/ZONE-watcher/app/views/home/search.html.erb
@@ -14,7 +14,7 @@
 		</ul>
 	</div>
 </div>
-<form action="/items" method="GET" id="formModal">
+<form action="/searches" method="POST" id="formModal">
 	<div class="row-fluid">
 		<div class="tab-content">
 			<div class="tab-pane active" id="sources">
