--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -99,6 +99,15 @@ a.label:visited{
   text-shadow: none;
 }
 
+.label-twitter[href] , .label-twitter[href]:visited, .label-twitter[href]:hover{
+  box-shadow: inset 0 1px 0 #fff;
+  color : #327695;
+  background-color : #cfe4f0;
+  border:1px solid #a6cde6;
+  border-radius: 4px;
+  text-shadow: none;
+}
+
 .label[href]:hover{
   text-decoration : underline;
 }
