--- a/ZONE-watcher/app/views/items/_reminder_panel.html.erb
+++ b/ZONE-watcher/app/views/items/_reminder_panel.html.erb
@@ -71,7 +71,7 @@
 				</div>
 				<div class="span2"></div>
 				<div class="span4">
-					<button class="btn btn-success span12" type="submit" onclick="movingData()">
+					<button id="updateSearch" class="btn btn-success span12" type="submit" onclick="movingData()">
 						<%= raw t 'items.reminder.update' %>
 					</button>
 				</div>
