--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -55,7 +55,7 @@ jwplayer("<%= image%>
 					<a class="shareLink" href="https://plus.google.com/share?url=<%= @item.uri %>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
 						<img class="littleCircleImage"src="assets/foregroundGoogle.png" alt="Share on Google+" height=30 width=30/>
 					</a>
-					<a class="shareLink" href="https://twitter.com/share?url=<%= @item.uri %>&via=zone_news&text=<%= @item.props["http://purl.org/rss/1.0/title"][0]%>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
+					<a class="shareLink" href="https://twitter.com/share?url=<%= @item.uri %>&via=readornet&text=<%= @item.props["http://purl.org/rss/1.0/title"][0]%>" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;">
 						<img class="littleCircleImage" src="assets/foregroundTwitter.png" height=30 width=30>
 					</a> 
 				</span>
