--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -1,3 +1,8 @@
+<div class="alert alert-error">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <%= raw t 'index.disclaimer' %>
+</div>
+
 <div class="search clear-top">
 
 <%= render 'home/search_tool'%>
