--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -100,11 +100,11 @@ a.label:visited{
 }
 
 .label-twitter[href] , .label-twitter[href]:visited, .label-twitter[href]:hover{
-  box-shadow: inset 0 1px 0 #fff;
-  color : #327695;
-  background-color : #cfe4f0;
-  border:1px solid #a6cde6;
+  color : #0088cc;
+  background-color : #f5f5f5
+  border:1px solid #e3e3e3;
   border-radius: 4px;
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.05);
   text-shadow: none;
 }
 
