--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -101,10 +101,10 @@ a.label:visited{
 
 .label-twitter[href] , .label-twitter[href]:visited, .label-twitter[href]:hover{
   color : #0088cc;
-  background-color : #f5f5f5
+  background-color : #f5f5f5;
   border:1px solid #e3e3e3;
   border-radius: 4px;
-  box-shadow: inset 0 1px 0 rgba(0,0,0,0.05);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
   text-shadow: none;
 }
 
