--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -38,7 +38,7 @@ jwplayer("<%= image%>
 			<div>
 				<img src="<%= thumb%>" class="littleCircleImage" width=30 height=30>
 				<a class="titleItem" target="_blank" href= "<%= @item.uri %>"><b><u><%= @item.props["http://purl.org/rss/1.0/title"][0]%></u> </b> </a>
-				<span class="showFavorite"><i class="icon-share-alt pointerMouse"></i></span>
+				<span class="showFavorite"><i class="icon-share pointerMouse"></i></span>
 				<span class="row-favorite"> 
 					<button class="btn" data-toggle="collapse" data-parent="#accordion-<%= @uriHash%>" href="#collapse-<%= @uriHash%>">
 						<i class="icon icon-tag"></i>
